cluster/apps/keycloak/iframe-middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: keycloak-iframe
spec:
  headers:
    accessControlAllowOriginListRegex:
      - "^(?:\\S+\\.)?${SECRET_DOMAIN/./\\.}$"
