cluster/apps/keycloak/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
  labels:
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/name: keycloak
spec:
  ingressClassName: "traefik"
  rules:
    - host: "keycloak.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak-service
                port:
                  number: 8443
  tls:
    - hosts:
        - "keycloak.${SECRET_DOMAIN}"
      secretName: "keycloak-${SECRET_DOMAIN/./-}-tls"
